--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -270,7 +270,10 @@ span {
   color: #ec3323 !important;
 }
 
-
+.clip {
+  clip-path: polygon(100% 0, 100% 40%, 50% 50%, 0 40%, 0 0);
+  height: 700px;
+}
 
 @media (max-height: 500px) {
   .slider-wrapper,
